# az-cgpu-onboarding

./: .gitignore  Confidential-GPU-H100-Manual-Installation-(PMK-for-Windows).md  Confidential-GPU-H100-Onboarding-(CMK-for-Linux).md  Confidential-GPU-H100-Onboarding-(CMK-for-Windows).md  Confidential-GPU-H100-Onboarding-(PMK-for-Linux).md  Confidential-GPU-H100-Onboarding-(PMK-for-Windows).md  Customer-Onboarding-Doc-(Linux).md  Customer-Onboarding-Doc-(Linux-SecureBootDisabled).md  Customer-Onboarding-Doc-(Linux-SecureBootEnabled).md  Customer-Onboarding-Doc-(Linux-TVM).md  Customer-Onboarding-Doc-(Provisioning-from-Linux-host-SecureBootDisabled).md  Customer-Onboarding-Doc-(Provisioning-from-Linux-host-SecureBootEnabled).md  Customer-Onboarding-Doc-(Provisioning-from-Windows-host-SecureBootDisabled).md  Customer-Onboarding-Doc-(Provisioning-from-Windows-host-SecureBootEnabled).md  Customer-Onboarding-Doc-(Windows).md  Customer-Onboarding-Doc-(Windows-SecureBootDisabled).md  Customer-Onboarding-Doc-(Windows-SecureBootEnabled).md  Customer-Onboarding-Doc-(Windows-TVM).md  Frequently-Asked-Questions.md  Legacy-FAQ.md  NOTICE.md  OpenSSL-Details.md  README.md  SNP-Guest-Attestation-Verification.md  VMI-Sharing-Instructions.md  es-metadata.yml  parameters.json  template.json
docs/: CGPU-Quota.md  (+22 more)
src/local_gpu_verifier/: README.md  pyproject.toml
src/local_gpu_verifier/src/verifier/: cc_admin.py  cc_admin_utils.py  config.py
src/local_gpu_verifier/src/verifier/attestation/: spdm_msrt_resp_msg.py
src/local_gpu_verifier/src/verifier/exceptions/: __init__.py
(+51 files in other folders)
