[project]
name = "nv-local-gpu-verifier"
version = "2.3.0"
description = "A Python-based tool that validates GPU measurements by comparing GPU runtime measurements with authenticated golden measurements"
authors = [
    {name = "NVIDIA"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
    "confidential-computing",
    "local-gpu-verifier",
    "attestation",
    "NVIDIA",
    "verifier"
]
dependencies = [
    'cryptography == 43.0.1',
    'ecdsa == 0.18.0',
    'lxml >= 4.9.1',
    'signxml == 3.2.0',
    'xmlschema == 2.2.3',
    'pyOpenSSL == 24.2.1',
    'PyJWT == 2.7.0',
    'nvidia-ml-py == 12.550.52',
    'requests == 2.32.3'
]

[tool.setuptools.package-data]
verifier = ["samples/*.swidtag", "rim/*.xsd", "samples/*.txt","certs/*.pem", "Tests/*/*.txt"]

[tool.uv]
# Force uv to use a managed CPython 3.12 build. Do NOT fall back to
# the system interpreter (Ubuntu 26.04 ships Python 3.14 by default,
# which lacks prebuilt wheels for lxml 4.9.x and cannot source-build
# it against libxml2 2.15).
python-preference = "only-managed"

